test/link/script-oob-bank-num.out
error: ROM0 bank 1 does not exist (the maximum is 0)
    at script-oob-bank-num.link(1)
error: ROMX bank 0 does not exist (the minimum is 1)
    at script-oob-bank-num.link(2)
error: VRAM bank 2 does not exist (the maximum is 1)
    at script-oob-bank-num.link(3)
error: WRAM0 bank 1 does not exist (the maximum is 0)
    at script-oob-bank-num.link(4)
error: WRAMX bank 0 does not exist (the minimum is 1)
    at script-oob-bank-num.link(5)
error: WRAMX bank 8 does not exist (the maximum is 7)
    at script-oob-bank-num.link(6)
error: OAM bank 1 does not exist (the maximum is 0)
    at script-oob-bank-num.link(7)
error: HRAM bank 1 does not exist (the maximum is 0)
    at script-oob-bank-num.link(8)
Linking failed with 8 errors
